@@ -61,9 +61,11 @@
 import sys
 import os
 import string
-
 import db
 import mgi_utils
+
+db.setAutoTranslate(False)
+db.setAutoTranslateBE(False)
 
 #
 #  CONSTANTS
