@@ -1,3 +1,10 @@
+TAG: uniprotload-6-0-4-1
+DATE: 04/27/2016
+STAFF: lec 
+CHANGES: TR12069/postgres cleanup
+1) convert to Git 
+2) add "db.setAutoTranslate"
+
 TAG: uniprotload-6-0-3-1
 DATE: 03/23/2016
 STAFF: lec
